--- a/Day_01/01.html
+++ b/Day_01/01.html
@@ -8,17 +8,24 @@
 </head>
 
 <body>
-    <div class="root">
+    <div id="root">
 
     </div>
-    <script>
+    <!-- <script>
         const root = document.getElementById("root");
         const h1 = document.createElement("h1");
         h1.textContent = "Hello, React!";
         root.appendChild(h1);
-    </script>
+    </script> -->
+
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+    <script>
+        const h1 = React.createElement("h1", {className: "heading"}, "Hello, React!");
+        const root = ReactDOM.createRoot(document.getElementById("root"));
+        root.render(h1);
+    </script>
 </body>
 
 </html>
